# beamline

./: CMakeLists.txt  README.md  VERSION  Vec3.h  beamline.cpp
cpu/: RayTracer.cpp  RayTracer.h
image/: ImageSaver.cpp  ImageSaver.h
loader/: SceneLoader.cpp  SceneLoader.h
scenes/: bubbles.beam  cornell.beam  glass.beam  sample.beam
